--- a/config.toml
+++ b/config.toml
@@ -454,6 +454,13 @@ theme = "LoveIt"
       # KaTeX extension mhchem
       # KaTeX 插件 mhchem
       mhchem = true
+    [params.page.code]
+      # whether to show the copy button of the code block
+      # 是否显示代码块的复制按钮
+      copy = true
+      # the maximum number of lines of displayed code by default
+      # 默认展开显示的代码行数
+      maxShownLines = 100
 # Markup related configuration in Hugo
 [markup]
   # Syntax Highlighting (https://gohugo.io/content-management/syntax-highlighting)
