--- a/config.toml
+++ b/config.toml
@@ -122,7 +122,7 @@ theme = "LoveIt"
           # title shown in home page (HTML format is supported)
           title = ""
           # subtitle shown in home page
-          subtitle = "A technical blog about development"
+          subtitle = "Keep Learning"
           # whether to use typeit animation for subtitle
           typeit = true
           # whether to show social links
